fix(codepens): set position and align-self to navbar

--- a/notes/codepens.css
+++ b/notes/codepens.css
@@ -5,7 +5,8 @@ body {
 
 nav {
   font-size: 14px;
-  overflow-y: auto;
+  position: sticky;
+  align-self: start;
 }
 
 ul > li {
